--- a/Traduzioniapi.yaml
+++ b/Traduzioniapi.yaml
@@ -454,20 +454,25 @@ paths:
           description: nome del tenant
           required: true
           schema:
-            type: object
-            properties:
-              userEmail:
-                type: string
-                example: test1@gmail.com
-              username:
-                type: string
-                example: test1
-              name:
-                type: string
-                example: Mario
-              lastName:
-                type: string
-                example: Rossi
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userEmail:
+                  type: string
+                  example: test1@gmail.com
+                username:
+                  type: string
+                  example: test1
+                name:
+                  type: string
+                  example: Mario
+                lastName:
+                  type: string
+                  example: Rossi
       responses:
         '200':
           description: OK
